Fix local action test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,8 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          max-lines: 1000
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print Output
         id: output
